# Leo

./: .gitignore  Makefile  README.md  leo.py  leoc.py  speed_compare.py  speed_test.py  start.py  todo.txt
3 semester/first and second/: main.pl  main.py  polish.py  start.bat  test.py
3 semester/flexJsonAlalyzer/: example.json  lex.yy.c  test  test.l  text.txt
3 semester/lexer/: lexer.py  main.py  python  start.bat  test.txt
3 semester/makestateMachineDetermined/: README.md  determiner.py  main.py
codegen_outputs/0.0.1/: fib_test.leo.leo.txt  primes_test.leo.leo.txt  sin_test.leo.leo.txt
cource_report/: .~lock.base.docx#  base.docx  base2.docx  course.md  out.docx
course/: Cpp.md  Perfomance_compare.md  Python.md  README.md  SPEC.md  leo.py  main.py  out.cpp  out.py  primes.cpp  q.py  questions.md  speed_compare.py  start.py  task.md  test.gv  test.py
course/docs/: LANG_RBNF.md  SPEC.md  lang.ebnf  lang.txt  reserver_table.txt  separators.txt  states.txt  terminals.txt
course/examples/: ex1  (+16 more)
docs/: Leovm.md  Perfomance_compare.md  SPEC.md  grammar.txt  state_diagram.dot
examples/: debug.leo  factorial.leo  fib.leo  fib_test.leo  min_max_average.leo  min_of_five_numbers.leo  primes.leo  primes_test.leo  simple_function_calculation.leo  sin.leo  sin_test.leo
grammar_txt/: reserver_table.txt  separators.txt  terminals.txt
src/: __init__.py  constants.py  text_driver.py  writer.py
vm/: CMakeLists.txt  Readme.md
vm/src/: bool.cpp  bool.h  commands.h  errors.h  float.cpp  float.h  int.cpp  int.h  main.cpp  reader.cpp  reader.h  types.h  vm.cpp  vm.h
(+73 files in other folders)
